--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -231,16 +231,23 @@
     padding: 1rem 0;
     overflow: hidden;
 
+    // SUMMARY
     summary {
         position: relative;
         padding-inline: 1.5rem;
         text-transform: capitalize;
         font-weight: 600;
-        // inset-inline-start: 1rem;
+    
+        .details-icon {
+        position: absolute;
+        top: -1rem;
+        right: 0;
+        opacity: 0.65;
+        transition: opacity 250ms ease;
+    }
         
         @include abstracts.sm {
         cursor: pointer;
-
         }
 
         &::marker {
@@ -259,14 +266,12 @@
             transition: 
                         rotate 250ms,
                         color 250ms;
-            // margin-right: 0.25rem;
-            // rotate: 90deg;
         }
     }
 
     // DETAILS ELEMENT IN DOM
     .details-content {
-
+        position: relative;
         padding: 0.5rem;
         margin-top: 0.5rem;
         background: hsl(0, 0%, 90%);
@@ -276,13 +281,27 @@
         .details-content-title {
             font-size: 1rem;
             font-size: abstracts.$font-clamp-sm;
-            margin-bottom: 0.25rem;
+            margin-bottom: 0.5rem;
+
+            span {
+                font-weight: 500;
+                font-size: abstracts.$font-clamp-xsm;
+            }
         }
 
         .details-content-link {
             display: flex;
-            gap: 0.25rem;
-            margin-top: 0.25rem;
+            gap: 0.5rem;
+            margin-block: 0.5rem 0;
+
+            &:hover, &:focus{ 
+                color: abstracts.$span-crimson;
+
+                .icon {
+                    translate: 0.25rem;
+                    opacity: 0.65;
+                }
+            }
         }
     }
 
@@ -301,11 +320,16 @@
     &[open]::details-content {
         block-size: auto;
         block-size: calc-size(auto);
+        scale: 1;
     }
 
     &[open] summary::before {
         color: abstracts.$span-crimson;
         rotate: 90deg;
+    }
+
+    &[open] summary > .details-icon {
+        opacity: 1;
     }
 
 }
