--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -239,15 +239,22 @@
         font-weight: 600;
     
         .details-icon {
-        position: absolute;
-        top: -1rem;
-        right: 0;
-        opacity: 0.65;
-        transition: opacity 250ms ease;
-    }
+                position: absolute;
+                top: -1rem;
+                right: 0;
+                opacity: 0.5;
+                transition: opacity 250ms ease, scale 500ms;
+            }
         
+        &:hover, &:focus {
+            .details-icon {
+                opacity: 0.75;
+            }
+        }
+
+
         @include abstracts.sm {
-        cursor: pointer;
+            cursor: pointer;
         }
 
         &::marker {
@@ -278,10 +285,14 @@
         border-radius: 0.25rem;
         overflow: hidden;
 
+        p {
+            line-height: 1.4;
+        }
+
         .details-content-title {
             font-size: 1rem;
             font-size: abstracts.$font-clamp-sm;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.75rem;
 
             span {
                 font-weight: 500;
@@ -292,7 +303,7 @@
         .details-content-link {
             display: flex;
             gap: 0.5rem;
-            margin-block: 0.5rem 0;
+            margin-block: 0.75rem 0;
 
             &:hover, &:focus{ 
                 color: abstracts.$span-crimson;
@@ -330,6 +341,7 @@
 
     &[open] summary > .details-icon {
         opacity: 1;
+        scale: 0.75;
     }
 
 }
